--- a/src/views/checklists/index.ejs
+++ b/src/views/checklists/index.ejs
@@ -1,4 +1,4 @@
-<%- include("../layouts/header", { title: "Lista de Tarefas" }) %>
+<%- include("../layouts/header", { title: "Listas de Tarefas" }) %>
 <%- include("../layouts/menu") %>
 
 <section class="section">
@@ -8,7 +8,7 @@
                 <h1 class="title size-4">Listas de Tarefas</h1>
             </div>
             <div class="column is-one-fifth">
-                <a href="/checklists/form" class="button is-success is-small">Nova Lista</a>
+                <a href="/checklists/new" class="button is-success is-small">Nova Lista</a>
             </div>
         </div>
 
@@ -32,7 +32,7 @@
                             </p>
                             <p class="card-footer-item">
                                 <span>
-                                    <a href="checklist-form.html">Editar</a>
+                                    <a href="/checklists/edit/<%= checklist._id %>">Editar</a>
                                 </span>
                             </p>
                             <p class="card-footer-item">
