feat(tasks): Implementação das rotas de adição de nova tarefa

--- a/src/views/checklists/edit.ejs
+++ b/src/views/checklists/edit.ejs
@@ -3,7 +3,8 @@
 
 <section class="section">
     <div class="container">
-        <%- include("./form", { actionType: "Editar Lista", url: "/checklists?_method=put", checklist: checklist}) %>
+        <h1 class="title size-4">Editar Lista</h1>
+        <%- include("./form", { url: `/checklists/${checklist._id}/?_method=put`, checklist: checklist}) %>
     </div>
 </section>
 
