--- a/src/views/checklists/form.ejs
+++ b/src/views/checklists/form.ejs
@@ -1,13 +1,13 @@
 <section class="section">
     <div class="container">
-        <h1 class="title size-4"><%= actionType %></h1>
+        
         <form method="post" action="<%= url %>">
             <div class="field">
                 <label class="label">Nome</label>
                 <div class="control">
                     <input class="input" type="text" name="checklist[name]" placeholder="Lista de Tarefas" value="<%= checklist.name %>">
-                    <% if(checklist.error) { %>
-                        <p class="is-danger help"><%= checklist.error %></p>
+                    <% if(checklist.errors && checklist.errors.name.message) { %>
+                        <p class="is-danger help">O campo de nome é obrigatório</p>
                     <% } %>
                 </div>
             </div>
