--- a/src/views/checklists/index.ejs
+++ b/src/views/checklists/index.ejs
@@ -21,7 +21,7 @@
                                 <%= checklist.name %>
                             </p>
                             <p class="subtitle is-size-6">
-                                <%= checklist.tasks.count %> tarefas
+                                <%= checklist.tasks.length %> tarefas
                             </p>
                         </div>
                         <footer class="card-footer">
@@ -32,12 +32,12 @@
                             </p>
                             <p class="card-footer-item">
                                 <span>
-                                    <a href="/checklists/edit/<%= checklist._id %>">Editar</a>
+                                    <a href="/checklists/<%= checklist._id %>/edit">Editar</a>
                                 </span>
                             </p>
                             <p class="card-footer-item">
                                 <span>
-                                    <a href="#" class="has-text-danger">Remover</a>
+                                    <a href="/checklists/<%= checklist._id %>/?_method=delete" class="has-text-danger">Remover</a>
                                 </span>
                             </p>
                         </footer>
