--- a/src/views/checklists/new.ejs
+++ b/src/views/checklists/new.ejs
@@ -3,7 +3,8 @@
 
 <section class="section">
     <div class="container">
-        <%- include("./form", { actionType: "Nova Lista", url: "/checklists?_method=post", checklist: checklist}) %>
+        <h1 class="title size-4">Nova Lista</h1>
+        <%- include("./form", { url: "/checklists?_method=post", checklist: checklist }) %>
     </div>
 </section>
 
