--- a/src/views/checklists/show.ejs
+++ b/src/views/checklists/show.ejs
@@ -19,7 +19,7 @@
                     <input type="checkbox"/> <%= task.name %>
                 </div>
                 <div class="column is-one-fifth">
-                    <button class="button is-danger is-small">Remover</button>
+                    <a href="/tasks/<%= task.id %>/?_method=delete" class="button is-danger is-small">Remover</a>
                 </div>
             </div>
         <% }) %>
