--- a/src/views/checklists/show.ejs
+++ b/src/views/checklists/show.ejs
@@ -15,8 +15,10 @@
         <hr />
         <% checklist.tasks.forEach(task => { %>
             <div class="columns">
-                <div class="column is-four-fifths">
-                    <input type="checkbox"/> <%= task.name %>
+                <div class="column is-four-fifths <%= task.done ? 'has-text-success is-italic' : ''%>">
+                    <input type="checkbox" 
+                    onchange="setTaskAsDone(this, '<%= task.id %>');"
+                    <%= task.done ? 'checked' : '' %> /> <%= task.name %>
                 </div>
                 <div class="column is-one-fifth">
                     <a href="/tasks/<%= task.id %>/?_method=delete" class="button is-danger is-small">Remover</a>
