--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -6,5 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/stylesheets/bulma.min.css">
   <title><%= title %></title>
+  <script src="/scripts/task.js"></script>
 </head>
 <body>
